--- a/todo.txt
+++ b/todo.txt
@@ -7,6 +7,7 @@ Visual Effect+ doesn't work (remove?)
 check with 1.21.8 (the latest version without missing mods)
 investigate performance
 investigate where the 3d bucket is coming from (i dont like it)
+check resource packs
 
 Add this when it is updated to 1.21.11:
 Astrocraft
