--- a/todo.txt
+++ b/todo.txt
@@ -1,13 +1,16 @@
 1.21.11:
-Configure the visual effects
-List of visual effect mods:
-particular reforged
-effectual
-Visual Effect+ doesn't work (remove?)
+check Visual Effect+
 check with 1.21.8 (the latest version without missing mods)
 investigate performance
 investigate where the 3d bucket is coming from (i dont like it)
 check resource packs
 
+Configure the visual effects
+List of visual effect mods:
+particular reforged
+effectual
+subtle effects
+
 Add this when it is updated to 1.21.11:
 Astrocraft
+draggable-lists
